<resources>
    <string name="app_name">hxci_service</string>
    <string name="text_shouye">首页</string>
    <string name="text_xiaoxi">消息</string>
    <string name="text_wode">我的</string>
    <string name="text_gongneng">功能</string>
    <string name="shouye_houqing01">哈尔滨信息工程学院</string>
    <string name="shouye_houqing02">后勤服务信息化系统</string>
    <string name="shouye_btn01">调温申请</string>
    <string name="shouye_btn02">保修服务</string>
    <string name="shouye_btn03">最新公告</string>
    <string name="shouye_btn04">更多</string>
    <string name="shouye_btn05">我的工作台</string>
    <string name="shouye_btn06">信息查询</string>
    <string name="shouye_btn07">投诉建议</string>
    <string name="gn_gongzuotai">我的工作台</string>
    <string name="gn_baoxiu">网络报修</string>
    <string name="gn_tiaowen">调温申请</string>
    <string name="gn_gonggao">最新公告</string>
    <string name="gn_xinxi">信息查询</string>
    <string name="gn_tousu">投诉建议</string>
    <string name="gn_gongneng">全部功能</string>
    <string name="gn_xinxifabu">信息发布</string>
</resources>
