<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:background="#b1edef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/gn_gongneng"
            android:textColor="@color/colorLight"
            android:drawableLeft="@drawable/gn_back"
            android:textSize="30sp"
            />

    </LinearLayout>
    <LinearLayout
        android:paddingTop="40dp"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">
            <TextView
                android:id="@+id/gongzuotai"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gn_gongzuotai"
                android:drawableTop="@drawable/gn_gongzuotai"
                android:textSize="18sp"
                />
        <TextView
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:id="@+id/baoxiu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/gn_baoxiu"
            android:drawableTop="@drawable/gn_baoxiu"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/tiaowen"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/gn_tiaowen"
            android:drawableTop="@drawable/gn_tiaowen"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/gonggao"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gn_gonggao"
            android:drawableTop="@drawable/gn_gonggao"
            android:textSize="18sp"

            />
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        >
        <TextView
            android:id="@+id/xinxi"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gn_xinxi"
            android:layout_weight="1"
            android:drawableTop="@drawable/gn_xinxi"
            android:textSize="18sp"

            />

        <TextView
            android:id="@+id/tousu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/gn_tousu"
            android:gravity="center_horizontal"
            android:text="@string/gn_tousu"
            android:textSize="18sp"

            />
</LinearLayout>
</LinearLayout>
