<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:background="#b1edef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/s_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/gn_gongneng"
            android:textColor="@color/colorLight"
            android:drawableLeft="@drawable/gn_back"
            android:textSize="30sp"
            />

    </LinearLayout>
    <LinearLayout
        android:paddingTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/s_baoxiu"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gn_baoxiu"
            android:drawableTop="@drawable/gn_baoxiu"
            android:textSize="18sp"
            />
        <TextView
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:id="@+id/s_xinxi"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/gn_xinxi"
            android:drawableTop="@drawable/gn_xinxi"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/s_tousu"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/gn_tousu"
            android:drawableTop="@drawable/gn_tousu"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/s_gonggao"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gn_gonggao"
            android:drawableTop="@drawable/gn_gonggao"
            android:textSize="18sp"

            />
    </LinearLayout>
</LinearLayout>
