<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/windowsBackground"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">
    <TextView
        android:id="@+id/shouYe"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_shouye"
        android:text="@string/text_shouye"
        android:textSize="18sp"
        android:textColor="@color/textPrimary"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/gongNeng"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_gongneng"
        android:text="@string/text_shouye"
        android:textSize="18sp"
        android:textColor="@color/textPrimary"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/xiaoXi"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_xiaoxi"
        android:text="@string/text_xiaoxi"
        android:textSize="18sp"
        android:textColor="@color/textPrimary"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/woDe"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_wode"
        android:text="@string/text_wode"
        android:textSize="18sp"
        android:textColor="@color/textPrimary"
        android:gravity="center_horizontal"/>
</LinearLayout>