<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="270dp">
    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/shouye_top01"
       android:scaleType="fitXY"
        />
        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:text="@string/shouye_houqing01"
            android:textSize="28sp"
            android:textColor="#fff"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="90dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shouye_houqing02"
            android:layout_below="@id/tv1"
            android:textSize="28sp"
            android:textColor="#fff"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="170dp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:layout_marginTop="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            >
            <TextView
                android:id="@+id/tiaowen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shouye_btn01"
                android:drawableTop="@drawable/shouye_btn07"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                />

        </LinearLayout>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"

            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/baoxiu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shouye_btn02"
                android:drawableTop="@drawable/shouye_btn01"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                />

        </LinearLayout>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/gonggao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shouye_btn03"
                android:drawableTop="@drawable/shouye_btn02"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                />

        </LinearLayout>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/gengduo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shouye_btn04"
                android:drawableTop="@drawable/shouye_btn03"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                />

        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
       android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="信息发布"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="[more]"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="10dp"
        >
        <ListView
            android:id="@+id/shouye_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

        </ListView>
    </LinearLayout>
</LinearLayout>
